<resources>

    <string name="app_name">Contact</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_contact">Contact Book</string>
    <string name="Name">Name</string>
    <string name="Age">Age</string>
    <string name="Number">Number</string>
    <string name="button_save">Save</string>
    <string name="button_refresh">Refresh</string>
    <string name="create_contact">Create Contact</string>
    <string name="button_search">Search</string>
    <string name="about">About Product</string>
    <string name="view">View</string>
    <string name="about_title">About Contact Book</string>
    <string name="about_text">This App is developed by <b>Cuong Le</b></string>
</resources>